Using the Ruby version from https://pages.github.com/versions/

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.0
+          ruby-version: 2.7.3 # Version in https://pages.github.com/versions/
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - name: Check build
