--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,10 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.6.x
-          architecture: x64
-
-      - name: Install bundler and dependencies
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
+          ruby-version: 2.7.3 # Version in https://pages.github.com/versions/
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - name: Check build
         run: bundle exec jekyll build
