--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,23 +1,11 @@
 {
-  // See https://go.microsoft.com/fwlink/?LinkId=733558
-  // for the documentation about the tasks.json format
-  "version": "2.0.0",
   "tasks": [
     {
-      "label": "Build",
-      "type": "process",
-      "command": "bundle",
-      "args": ["exec", "jekyll", "serve", "--config", "_config_dev.yml"],
-      "isBackground": true,
-      "problemMatcher": {
-        "base": "$tsc",
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": "^Configuration file:.*",
-          "endsPattern": ".*Server running.*"
-        }
-      },
-      "group": "build"
+      "type": "npm",
+      "script": "start",
+      "problemMatcher": [],
+      "label": "npm: start",
+      "detail": "npm run watch:eleventy & npm run watch:sass"
     }
   ]
 }
