--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "eleventy-xml-plugin": "^0.1.0",
     "sass": "^1.49.9"
+  },
+  "dependencies": {
+    "@kevingimbel/eleventy-plugin-mermaid": "^1.1.0"
   }
 }
