--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+      - run: npm ci
       - name: build
         run: npm run build
