--- a/package.json
+++ b/package.json
@@ -1,33 +1,49 @@
 {
-  "name": "boa-dev.github.io",
-  "version": "1.0.0",
-  "description": "The home of Boa's blog",
-  "main": "index.js",
+  "name": "boa-dev-github-io",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:eleventy": "npx @11ty/eleventy --serve",
-    "watch:sass": "sass css:_site/css --watch",
-    "start": "npm run watch:eleventy & npm run watch:sass",
-    "build": "npx sass css:_site/css && npx @11ty/eleventy"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/boa-dev/boa-dev.github.io.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/boa-dev/boa-dev.github.io/issues"
-  },
-  "homepage": "https://github.com/boa-dev/boa-dev.github.io#readme",
-  "devDependencies": {
-    "@11ty/eleventy": "^2.0.0",
-    "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
-    "eleventy-xml-plugin": "^0.1.0",
-    "sass": "^1.60.0"
+    "docusaurus": "docusaurus",
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "swizzle": "docusaurus swizzle",
+    "deploy": "docusaurus deploy",
+    "clear": "docusaurus clear",
+    "serve": "docusaurus serve",
+    "write-translations": "docusaurus write-translations",
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@kevingimbel/eleventy-plugin-mermaid": "^2.1.0"
+    "@docusaurus/core": "2.4.0",
+    "@docusaurus/plugin-content-pages": "^2.4.0",
+    "@docusaurus/preset-classic": "2.4.0",
+    "@mdx-js/react": "^1.6.22",
+    "@monaco-editor/react": "^4.4.6",
+    "@ZackMitkin/boa": "^0.16.0",
+    "clsx": "^1.2.1",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@docusaurus/module-type-aliases": "2.4.0",
+    "@tsconfig/docusaurus": "^1.0.5",
+    "typescript": "^4.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
