--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@mdx-js/react": "^1.6.22",
     "@monaco-editor/react": "^4.4.6",
     "@ZackMitkin/boa": "^0.16.0",
+    "chart.js": "^4.2.1",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
