--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.0",
-    "@docusaurus/plugin-content-pages": "^2.4.0",
-    "@docusaurus/preset-classic": "2.4.0",
+    "@docusaurus/core": "2.4.1",
+    "@docusaurus/plugin-content-pages": "^2.4.1",
+    "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
-    "@monaco-editor/react": "^4.4.6",
-    "@ZackMitkin/boa": "^0.16.0",
-    "chart.js": "^4.2.1",
+    "@monaco-editor/react": "^4.5.1",
+    "@razican/boa_wasm": "^0.17.0",
+    "chart.js": "^4.3.1",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -39,9 +39,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.0",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "typescript": "^4.7.4"
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "@tsconfig/docusaurus": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "browserslist": {
     "production": [
