--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/plugin-content-pages": "^2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
-    "@mdx-js/react": "^1.6.22",
+    "@docusaurus/core": "^3.1.1",
+    "@docusaurus/plugin-content-pages": "^3.1.1",
+    "@docusaurus/preset-classic": "^3.1.1",
+    "@mdx-js/react": "^3.0.1",
     "@monaco-editor/react": "^4.5.1",
     "@razican/boa_wasm": "^0.17.0",
     "chart.js": "^4.3.1",
-    "clsx": "^1.2.1",
+    "clsx": "^2.1.0",
     "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1",
+    "@docusaurus/module-type-aliases": "^3.1.1",
     "@tsconfig/docusaurus": "^2.0.0",
     "typescript": "^5.1.6"
   },
