Added type checking to linting

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "lint": "prettier --check . && eslint ."
+    "lint": "prettier --check . && tsc && eslint ."
   },
   "dependencies": {
     "@docusaurus/core": "^3.1.1",
