--- a/package.json
+++ b/package.json
@@ -22,26 +22,35 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && tsc && eslint ."
   },
   "dependencies": {
     "@docusaurus/core": "^3.1.1",
     "@docusaurus/plugin-content-pages": "^3.1.1",
     "@docusaurus/preset-classic": "^3.1.1",
     "@mdx-js/react": "^3.0.1",
-    "@monaco-editor/react": "^4.5.1",
+    "@monaco-editor/react": "^4.6.0",
     "@razican/boa_wasm": "^0.17.0",
-    "chart.js": "^4.3.1",
+    "chart.js": "^4.4.1",
     "clsx": "^2.1.0",
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.1.1",
-    "@tsconfig/docusaurus": "^2.0.0",
-    "typescript": "^5.1.6"
+    "@docusaurus/tsconfig": "^3.1.1",
+    "@docusaurus/types": "^3.1.1",
+    "typescript": "^5.3.3",
+    "prettier": "3.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "@docusaurus/eslint-plugin": "^3.1.1"
   },
   "browserslist": {
     "production": [
