--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "@docusaurus/eslint-plugin": "^3.1.1"
+    "@docusaurus/eslint-plugin": "^3.1.1",
+    "@docusaurus/plugin-client-redirects": "^3.1.1"
   },
   "browserslist": {
     "production": [
