A few more changes based on feedback

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,3 +1,6 @@
 boa-dev:
   name: Boa Developers
   url: https://github.com/boa-dev
+temporal-dev:
+  name: Temporal_rs Developers
+  url: https://github.com/boa-dev/temporal
